added new method to change options, and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 *.swp
-**/coverage/
-**/.yardoc/
-**/doc/
+coverage/
+.yardoc/
+doc/
 guides/output
 guides/staging
 doc/
 tags
 gems.tags
 .yardoc
-**/log/*
 .DS_Store
-**/spec/lib/samples/tmp/*
-yuidoc/output/*
-yuidoc/parsed/*
-yuidoc/**/*.pyc
+spec/lib/samples/tmp/*
